--- a/style/styles.css
+++ b/style/styles.css
@@ -1,10 +1,34 @@
 html{
-  display: flex;
+display: flex;
 }
-section {
-  columns: 9;
-  rows: 9;
+table {
+display: flex;
+align-items: stretch;
+padding: 1px 1px;
+min-width: 200px;
+
+}
+.gameGrid{
+display: flex;
+padding: 1px;
+margin: 1px;
+}
+.cool {
+display: flex;
+flex-direction: column;
+align-content: space-around;
+padding: 1;
+margin: 1;
+}
+/* .go{
   display: flex;
-  max-width: relative;
-flex-wrap: wrap;
+  flex-grow: 20;
+} */
+table, th{
+  /* display: table-cell; */
+  vertical-align: middle;
+  padding: 1;
+}
+table, td{
+  padding: 1;
 }
